CV.css
body {
	background-image: url("backgrounds/crossword/crossword/crossword.png");
	font-family: Arial;
	margin-left: 80px;
}

h1 {
	color: darkcyan;
}

.cvsechead {
	color: darkgray;
}

.subteaching {
	color: darkgray;
	font-style: italic;
	margin-left: 40px;
}

ul {
	list-style-type: none;
}

.contact {
	float-defer-column: last;
}

